added quantization and fixed dtype issues

--- a/demo/Janus_colab_demo.ipynb
+++ b/demo/Janus_colab_demo.ipynb
@@ -2565,7 +2565,7 @@
         "vl_gpt: MultiModalityCausalLM = AutoModelForCausalLM.from_pretrained(\n",
         "    model_path, trust_remote_code=True\n",
         ")\n",
-        "vl_gpt = vl_gpt.to(torch.bfloat16).cuda().eval()\n",
+        "vl_gpt = vl_gpt.to(torch.float16).cuda().eval()\n",
         "\n",
         "conversation = [\n",
         "    {\n",
@@ -2827,8 +2827,8 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Flash Attention 2.0 only supports torch.float16 and torch.bfloat16 dtypes, but the current dype in LlamaForCausalLM is torch.float32. You should run training or inference using Automatic Mixed-Precision via the `with torch.autocast(device_type='torch_device'):` decorator, or load the model with the `torch_dtype` argument. Example: `model = AutoModel.from_pretrained(\"openai/whisper-tiny\", attn_implementation=\"flash_attention_2\", torch_dtype=torch.float16)`\n",
-            "Flash Attention 2.0 only supports torch.float16 and torch.bfloat16 dtypes, but the current dype in LlamaModel is torch.float32. You should run training or inference using Automatic Mixed-Precision via the `with torch.autocast(device_type='torch_device'):` decorator, or load the model with the `torch_dtype` argument. Example: `model = AutoModel.from_pretrained(\"openai/whisper-tiny\", attn_implementation=\"flash_attention_2\", torch_dtype=torch.float16)`\n"
+            "Flash Attention 2.0 only supports torch.float16 and torch.float16 dtypes, but the current dype in LlamaForCausalLM is torch.float32. You should run training or inference using Automatic Mixed-Precision via the `with torch.autocast(device_type='torch_device'):` decorator, or load the model with the `torch_dtype` argument. Example: `model = AutoModel.from_pretrained(\"openai/whisper-tiny\", attn_implementation=\"flash_attention_2\", torch_dtype=torch.float16)`\n",
+            "Flash Attention 2.0 only supports torch.float16 and torch.float16 dtypes, but the current dype in LlamaModel is torch.float32. You should run training or inference using Automatic Mixed-Precision via the `with torch.autocast(device_type='torch_device'):` decorator, or load the model with the `torch_dtype` argument. Example: `model = AutoModel.from_pretrained(\"openai/whisper-tiny\", attn_implementation=\"flash_attention_2\", torch_dtype=torch.float16)`\n"
           ]
         },
         {
